[gd_scene load_steps=7 format=2]

[ext_resource path="res://world.gd" type="Script" id=1]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/background.jpg" type="Texture" id=4]
[ext_resource path="res://Player.tscn" type="PackedScene" id=5]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.794632, -0.0579987, 0, 0, 0, 0, 638.677, 0.45137, 0, 0, 0, 0, 639.374, 962.127, 0, 0, 0, 0, 1.66174, 957.846, 0, 0, 0, 0, -0.794632, 0.508034 )
}

[node name="World" type="Node"]
script = ExtResource( 1 )
enemy = ExtResource( 2 )

[node name="background" parent="." instance=ExtResource( 3 )]

[node name="background_image" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 50.0001, 866.002 )
speed = 300

[node name="Enemy_path" type="Path2D" parent="."]
editor/display_folded = true
curve = SubResource( 1 )

[node name="enemy_position" type="PathFollow2D" parent="Enemy_path"]
position = Vector2( -0.794632, -0.0579987 )
rotation = 0.000796546

[node name="start_position" type="Position2D" parent="."]
position = Vector2( 320, 480 )

[node name="Enemy_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Score_timer" type="Timer" parent="."]

[node name="Play_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOver" type="AudioStreamPlayer" parent="."]

[node name="Background_music" type="AudioStreamPlayer" parent="."]
[connection signal="start_game" from="background" to="." method="new_game"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="Enemy_timer" to="." method="_on_Enemy_timer_timeout"]
[connection signal="timeout" from="Score_timer" to="." method="_on_Score_timer_timeout"]
[connection signal="timeout" from="Play_timer" to="." method="_on_Play_timer_timeout"]
